# famstar-client

./: .gitignore  .gitmodules  .tool-versions  Cargo.toml  Dockerfile  README.md  justfile  package-lock.json  package.json  rename_bin.js  svelte.config.js  tsconfig.json  vite.config.js
.github/workflows/: build.yml
.helix/: languages.toml
public/: global.css
src/: App.svelte  app.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/data/: share.db
src-tauri/src/: main.rs  model.rs
src/components/: Image.svelte  Message.svelte  Slideshow.svelte
src/lib/: earthstar.web.js  sync.ts
src/lib/components/: Image.svelte  Message.svelte
src/lib/store/: MessageStore.ts  settings.ts
src/lib/types/: item.type.ts
src/params/: share.ts  url.ts
src/routes/: +layout.ts  +page.svelte
src/routes/tauri/: +page.svelte
src/routes/web/[...err]/: +page.svelte
src/routes/web/[share=share]/[target=url]/: +page.server.ts  +page.svelte
src/routes/web/[share]/[target]/: +server.ts
src/store/: ImageStore.js  ImageStore.ts  MessageStore.ts
src/types/: svelte-carousel.d.ts
