[package]
name = "famstar-client"
version = "0.3.0"
description = "The client for my famstar project"
authors = ["AnActualEmerald"]
license = ""
repository = ""
default-run = "famstar-client"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0.103"
serde = { version = "1.0.175", features = ["derive"] }
tauri = { version = "1.4.1", features = [ "window-set-always-on-top", "window-set-fullscreen", "window-set-cursor-grab", "window-set-cursor-visible", "fs-all", "process-command-api"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
